--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             
             
             <p>Medida primer cateto</p>
-            <input type="number" name="cateto1" id="cateto1">
+            <input type="number" name="cateto1" id="cateto1" value="200">
             <p>Medida segundo cateto</p>
-            <input type="number" name="cateto2" id="cateto2"><br>           
+            <input type="number" name="cateto2" id="cateto2" value="200"><br>           
             <button onclick="calcular()">Crear</button>
             <button onclick="reset()">Reset</button>
         </div>
